; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_unixCurrentTime.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/sqlite3/extr_sqlite3.c_unixCurrentTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, double*)* @unixCurrentTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unixCurrentTime(i32* %0, double* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double*, align 8
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store double* %1, double** %4, align 8
  store double 0.000000e+00, double* %5, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @UNUSED_PARAMETER(i32* %7)
  %9 = call i32 @unixCurrentTimeInt64(i32 0, double* %5)
  store i32 %9, i32* %6, align 4
  %10 = load double, double* %5, align 8
  %11 = fdiv double %10, 8.640000e+07
  %12 = load double*, double** %4, align 8
  store double %11, double* %12, align 8
  %13 = load i32, i32* %6, align 4
  ret i32 %13
}

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1

declare dso_local i32 @unixCurrentTimeInt64(i32, double*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
